@@ -214,7 +214,8 @@ GSPDFPrintOperation.m \
 GSModelLoaderFactory.m \
 GSGormLoader.m \
 GSGModelLoader.m \
-GSNibLoader.m
+GSNibLoader.m \
+NSManagedObjectContext.m
 
 # Turn off NSMenuItem warning that NSMenuItem conforms to <NSObject>,
 # but does not implement <NSObject>'s methods itself (it inherits
